<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#d5d6d6">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.example.android.localbusiness.MainActivity">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/stihl" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/img1"
            android:src="@drawable/sv" />


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="16dp"
            android:onClick="goToUrl"
            android:tint="#fd5c29"
            app:srcCompat="@drawable/ic_work_black_24dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton2"
            android:layout_marginBottom="8.5dp"
            android:layout_toEndOf="@+id/imageButton"
            android:layout_toRightOf="@+id/imageButton"
            android:onClick="goToUrl"
            android:text="@string/text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:onClick="MapMethod"
            android:tint="#f34236"
            app:srcCompat="@drawable/ic_location_on_black_24dp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton3"
            android:layout_marginBottom="7.5dp"
            android:layout_toEndOf="@+id/imageButton2"
            android:layout_toRightOf="@+id/imageButton2"
            android:onClick="MapMethod"
            android:text="@string/location"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:onClick="makeCall"
            android:tint="#4784f3"
            app:srcCompat="@drawable/ic_call_black_24dp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton4"
            android:layout_marginBottom="8.5dp"
            android:layout_toEndOf="@+id/imageButton3"
            android:layout_toRightOf="@+id/imageButton3"
            android:onClick="makeCall"
            android:text="@string/phone"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:onClick="sendEmail"
            android:tint="#fdb502"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton5"
            android:layout_marginBottom="9.5dp"
            android:layout_toEndOf="@+id/imageButton4"
            android:layout_toRightOf="@+id/imageButton4"
            android:onClick="sendEmail"
            android:text="@string/mail"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton4"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:tint="#fd2969"
            app:srcCompat="@drawable/ic_access_time_black_24dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_alignRight="@+id/name"
            android:layout_alignStart="@+id/name"
            android:layout_below="@id/mail"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageButton5"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/about"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#000000"
            android:textStyle="bold|italic" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5" />

        <ImageView
            android:id="@+id/dialogs"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/language" />

    </RelativeLayout>
</ScrollView>